src/components/projectsPage/devProjects.css
.project-card.dev {
  width: 100%;
  height: 45vw;
  margin: 1em 0;
}

.card-content.dev {
  width: 100%;
  height: 100%;
  border-radius: 20px;

  text-align: center;
  position: relative;
  transition: transform 1s linear;
  transform-style: preserve-3d;
}

.project-card.dev:hover .card-content {
  transform: rotateY(0.5turn);
}

.card-front,
.card-back {
  width: 100%;
  height: 100%;
  border-radius: 20px;

  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  backface-visibility: hidden;
  transform-style: preserve-3d;
}

.card-front picture {
  height: 100%;
}

.card-front img {
  height: 100%;
  width: 100%;
  border-radius: 20px;
  object-fit: cover;
}

.card-front::before {
  border: 2px solid var(--dev-accent-color);
  border-radius: 20px;
  content: "";

  position: absolute;
  top: 5%;
  bottom: 5%;
  left: 5%;
  right: 5%;
  transform: translateZ(8rem);
}

.front-titles {
  width: 100%;
  height: 100%;
  border-radius: 20px;
  padding: 10%;
  background: var(--dev-primary-color-transparent);

  position: absolute;
  top: 0;
  transform: translateZ(3rem);
  transform-style: preserve-3d;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.dev.card-title {
  transform: translateZ(3rem);
}

.dev.card-subtitle {
  transform: translateZ(2rem);
}

.card-back {
  transform: rotateY(0.5turn);
  background: var(--dev-secondary-color);
}

.card-description {
  height: 55%;
  padding: 2em;

  text-align: center;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  overflow: scroll;
}

.card-tools {
  width: 100%;
  padding: 1.5em;

  display: inline-flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;

  opacity: 0.8;
  font-size: 0.8rem;
}

.card-tool {
  margin: 0.2em 1em;
  text-align: center;
}

.card-links {
  width: 100%;
  height: 20%;
  border-radius: 0 0 20px 20px;

  display: flex;
  justify-content: center;
  align-items: center;
  justify-self: flex-end;
}

.demo-link {
  height: 100%;
  border-radius: 0 0 0 20px;

  background-color: rgba(79, 224, 217, 0.827);
}

.github-link {
  height: 100%;
  border-radius: 0 0 20px 20px;
  background-color: var(--dev-accent-color2);
}

.demo-link ~ .github-link {
  border-radius: 0 0 20px 0;
}

.demo-link:active,
.github-link:active,
.demo-link:focus,
.github-link:focus,
.demo-link:hover,
.github-link:hover {
  background: black;
  color: var(--dev-accent-color);
  box-shadow: 0 0 0 1px var(--dev-accent-color);
}

/* laptops */
@media (min-width: 801px) {
  .project-card.dev {
    margin: 1em;
    width: 45%;
    height: 35vw;
  }
}

/* desktop */
@media (min-width: 1025px) {
  .project-card.dev {
    height: 25vw;
  }
}

